Ders 19 ve Ders 20

--- a/CSharpEgitimKampi301/CSharpEgitimKampi301.EFProject/CSharpEgitimKampi301.EFProject.csproj
+++ b/CSharpEgitimKampi301/CSharpEgitimKampi301.EFProject/CSharpEgitimKampi301.EFProject.csproj
@@ -70,11 +70,11 @@
     <Compile Include="Customer.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Frm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Frm.Designer.cs">
+      <DependentUpon>Frm.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmLocation.cs">
       <SubType>Form</SubType>
@@ -115,8 +115,8 @@
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Frm.resx">
+      <DependentUpon>Frm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLocation.resx">
       <DependentUpon>FrmLocation.cs</DependentUpon>
